[package]
name = "gnome-pomodoro-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures-util = "0.3.29"
serde = "1.0.193"
serde_json = "1.0.108"
zbus = "3.14.1"
